fix list spacing, add cascades

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -76,8 +76,15 @@
 .customer-card-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
     gap: 20px;
     margin-top: 1em;
+}
+
+.dfc {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .db {
@@ -110,4 +117,7 @@
   margin: auto;
 }
 
+.take-height {
+    margin-top: auto;
+}
 
